# transparencia-solidaria

./: .gitignore  README.md  create_base.py  main.py  pyproject.toml  requirements.txt
queries/: popular_tabelas.sql
static/css/: style.css
templates/: _base.html  _title.html  entidade.html  entidade_lista.html  index.html  template-pagina.html
templates/entidade/: content.html  lista.html  lista_navigation.html  navigation.html
templates/estoque/: lista.html
templates/home/: content.html  navigation.html
transparencia_solidaria/core/: configs.py  database.py
transparencia_solidaria/models/: estoque_model.py
transparencia_solidaria/repositories/: entidade_repository.py  estoque_repository.py
transparencia_solidaria/views/: entidade_view.py  estoque_view.py  home_view.py
